# krausening

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pom.xml
.github/workflows/: maven.yml
krausening/: README.md  pom.xml
krausening-python/: README.md  pom.xml  pyproject.toml  requirements.txt
krausening-python/src/krausening/logging/: log_manager.py
krausening-python/src/krausening/properties/: __init__.py  property_encryptor.py  property_manager.py
krausening-python/src/main/python/: LICENSE  README.md  setup.py
krausening-python/src/main/python/krausening/logging/: log_manager.py
krausening-python/src/main/python/krausening/properties/: property_encryptor.py  property_manager.py
krausening-python/src/test/python/features/: environment.py  properties.feature
krausening-python/src/test/python/features/steps/: core_properties_steps.py
krausening-python/tests/features/: caching.feature  checks.feature  environment-properties.feature  environment.py  properties.feature
krausening-python/tests/features/steps/: caching_steps.py  checks_steps.py  core_properties_steps.py  test_config.py
krausening-python/tests/resources/config/: hot_reload.properties  test-encrypted.properties  test.properties
krausening-python/tests/resources/config_override/: test.properties
krausening/src/test/resources/: log4j.xml
krausening/src/test/resources/base/: a-example.properties  encrypted.properties
src/test/resources/application-config/: application.conf
src/test/resources/base/: empty.properties  example.properties
src/test/resources/base-override/: required-overrides.properties
src/test/resources/extensions/: example-override-environment-all.properties  example-override-environment.properties  example.properties
src/test/resources/extensions-missing-file/: config.properties
src/test/resources/extensions-no-required-overrides-by-environment/: example-override.properties  example-properties-with-same-keys.properties
(+43 files in other folders)
