[tool.poetry]
name = "krausening"
version = "12.dev"
description = "Python implementation of Krausening"
authors = ["Eric Konieczny <ekonieczny@cpointe-inc.com>"]
license = "MIT"
readme = "README.md"
repository = "https://bitbucket.org/cpointe/krausening"

keywords = ["properties", "configuration-management"]

[tool.poetry.dependencies]
python = "3.9.13"
javaproperties = "^0.8.1"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^22.6.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
