[tool.poetry]
name = "krausening"
version = "19.dev"
description = "Python implementation of Krausening"
authors = ["Eric Konieczny <ekoniec1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TechnologyBrewery/krausening"

keywords = ["properties", "configuration-management"]

[tool.poetry.dependencies]
python = "^3.9"
javaproperties = "^0.8.1"
cryptography = ">=42.0.0"
watchdog = "^2.1.9"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^22.6.0"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
